[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Weapons/gluepuddle.png" type="Texture" id=1]
[ext_resource path="res://weapons/projectiles/gluePuddle.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52.7058, 5.65834 )

[node name="GluePuddle" type="Area2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -5 )
scale = Vector2( 2, 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_GluePuddle_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_GluePuddle_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
